--- a/globalstart/Base.lproj/Main.storyboard
+++ b/globalstart/Base.lproj/Main.storyboard
@@ -3007,7 +3007,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="160"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cNH-FY-qbP" id="aTl-Da-wYW">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ugo-IJ-AjQ">
@@ -3095,6 +3095,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="xow-vU-XSZ">
                         <barButtonItem key="leftBarButtonItem" title="&lt;Back" id="AA1-sQ-W4m">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="back:" destination="DGk-zf-hki" id="IKe-Ky-tRz"/>
                             </connections>
